src/ts/tests/fixtures/invalid_include_tree/invalid_type.cloesce.ts
// @ts-nocheck
// InvalidDataSourceDefinition

@Model
export class Foo {
  @PrimaryKey
  id: number;

  @DataSource
  static readonly bar: number = 1;
}
